# loop-closure-toolbox

./: .gitignore  CMakeLists.txt
python/: CMakeLists.txt  evaluate_vpr_techniques.py  execute_evaluation_mode.py  filter_duplicates.py  loopclosuretoolbox.cpp  main.py  performance_comparison.py  test.py  test_corridor.py  test_dbow3.py  test_vlad.py  train.py  train_dbow3.py  utils.py
src/DBoW2/: CMakeLists.txt  demo.cpp
src/DBoW2/include/: Converter.h  DBoW2.h  ORBextractor.h  Random.h  TemplatedDatabase.h  TemplatedVocabulary.h  Timestamp.h
src/DBoW2/src/: Converter.cpp  ORBextractor.cpp  Random.cpp  ScoringObject.cpp  Timestamp.cpp
src/DBoW3/include/: Vocabulary.h
src/VLAD/: CMakeLists.txt
src/VLAD/include/: VladVocabulary.h
src/VLAD/src/: VladVocabulary.cpp
test/: CMakeLists.txt  test_dbow_rtabmap.cpp  test_utils.h  test_vlad_database.cpp  test_vlad_transform.cpp  vlad.cpp
